# clawpass

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASING.md  cliff.toml  install.sh  release-plz.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  coverage.yml  release-plz.yml  release.yml
Formula/: clawpass.rb
docs/: ARCHITECTURE.md
schemas/: list.schema.json  peek.schema.json  pop.schema.json  push.schema.json
src/: main.rs
